--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
+    "bootstrap": "^5.3.3",
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -15,6 +16,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.0.0",
     "gulp-uglify": "^3.0.2",
+    "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "sass": "^1.44.0"
   }
 }
